method getMessages replaced, fix in persinstence